# socrates

./: .gitignore  README.md  build_binary.sh  cli.py  config.py  critic.py  docker-compose.yml  generator.py  graph.py  index.html  install.sh  logger.py  models.py  package-lock.json  package.json  pyproject.toml  socrates.rb  start.txt  tools.py  tsconfig.json  tui.py  vite.renderer.config.ts
EEG/: iteration_01.md  iteration_02.md  iteration_03.md  iteration_04.md  iteration_05.md  iteration_06.md  iteration_07.md  iteration_08.md  iteration_09.md  iteration_10.md  iteration_11.md  iteration_12.md  iteration_13.md  iteration_14.md  iteration_15.md  iteration_16.md  iteration_17.md  iteration_18.md  iteration_19.md  iteration_20.md  iteration_21.md  iteration_22.md  iteration_23.md  iteration_24.md  iteration_25.md  iteration_26.md  iteration_27.md  iteration_28.md  iteration_29.md  iteration_30.md  iteration_31.md  iteration_32.md  iteration_33.md  iteration_34.md  iteration_35.md  iteration_36.md  iteration_37.md  iteration_38.md
agents/: README.md  cli.py  config.py  critic.py  generator.py  graph.py  logger.py  models.py  pyproject.toml  spec.md  tools.py
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: researcher.py
backend/app/routers/: history.py  models.py  research.py  search.py
backend/app/services/: storage.py
backend/app/tools/: __init__.py  searxng.py
frontend/: package-lock.json  package.json
src/: App.tsx  index.css  main.ts  preload.ts  vite-env.d.ts
test_output/: iteration_01.md  iteration_02.md  (+1 more)
(+22 files in other folders)
