[project]
name = "socrates-agents"
version = "0.1.0"
description = "Generator-Critic Multi-Agent System"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.0.60",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.26.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.4.0",
]


